fix #2950 drawer changes affect visibility so screenreaders don't parse side content at all times, only when drawer is opened

--- a/src/components/unstyled/drawer.css
+++ b/src/components/unstyled/drawer.css
@@ -6,6 +6,8 @@
   }
   &-side {
     @apply pointer-events-none fixed start-0 top-0 col-start-1 row-start-1 grid w-full grid-cols-1 grid-rows-1 items-start justify-items-start overflow-x-hidden overflow-y-hidden overscroll-contain;
+    visibility: hidden;
+    @apply transition-all duration-300 ease-out will-change-transform;
     height: 100vh;
     height: 100dvh;
     & > .drawer-overlay {
@@ -26,6 +28,7 @@
     @apply fixed h-0 w-0 appearance-none opacity-0;
     &:checked {
       & ~ .drawer-side {
+        visibility: visible;
         @apply pointer-events-auto visible overflow-y-auto;
         & > *:not(.drawer-overlay) {
           transform: translateX(0%);
